# smartCash

./: .envexample  .gitignore  pyproject.toml  readme.md  requirements.txt
kamilov/: manage.py
kamilov/kamilov/: settings.py  urls.py
store/: db.sqlite3
store/core/: asgi.py  settings.py  wsgi.py
store/items/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
store/items/migrations/: 0001_initial.py  0002_alter_order_status.py
store/items/scripts/: about.py  config.py  index.py  instructions.py  order.py  reports.py  stocks.py
store/items/templates/: base.html
store/items/templates/items/: about.html  addStock.html  add_order.html  delete_item.html  detail.html  index.html  instructions.html  order_confirmation.html  orders.html  reports.html  stock.html
store/kamilov/: settings.py  urls.py
