[tool.poetry]
name = "smartcash"
version = "0.1.0"
description = ""
authors = ["Kamilovkz <001kamilov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-widget-tweaks = "^1.4.12"
django = "^4.2.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
